--- a/.github/workflows/centos7-build-and-deploy.yml
+++ b/.github/workflows/centos7-build-and-deploy.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: centos-7
 
     steps:
+      - name: Pull
+      - run: git pull
       - uses: actions/checkout@v2
       - name: Install Python
         run: yum install python3 python3-pip
