--- a/.github/workflows/centos7-build-and-deploy.yml
+++ b/.github/workflows/centos7-build-and-deploy.yml
@@ -9,12 +9,12 @@ jobs:
   build:
     runs-on: centos-7
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    #steps:
+      #- name: Checkout Repository
+      #  uses: actions/checkout@v2
 
-      - name: Write Test File
-        run: echo "This is a test file." > test.txt
+      #- name: Write Test File
+      #  run: echo "This is a test file." > test.txt
       #- name: Install Python
       #  run: yum install python3 python3-pip
       #- name: Run and nohup discordbot
